[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Nodes/PauseMenu/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="PauseMenu" type="PopupDialog"]
pause_mode = 2
margin_right = 535.0
margin_bottom = 443.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
margin_left = 178.487
margin_top = 66.2031
margin_right = 371.487
margin_bottom = 118.203
custom_fonts/font = SubResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 178.487
margin_top = 142.312
margin_right = 350.487
margin_bottom = 194.312
custom_fonts/font = SubResource( 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 215.288
margin_top = 338.248
margin_right = 318.288
margin_bottom = 390.248
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 155.849
margin_top = 244.908
margin_right = 371.849
margin_bottom = 296.908
custom_fonts/font = SubResource( 1 )
text = "Main Menu"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
